--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
       </button>
     </div>
 
+    <img id="dog" src="" height="250" style="cursor: pointer" />
+
     <!-- Information Section -->
     <div
       id="infoDump"
@@ -109,7 +111,7 @@
       </div>
     </template>
     <!-- Carousel Item Template -->
-    <script type="text/javascript" src="./Carousel.js"></script>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="text/javascript" src="Carousel.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
